app/assets/stylesheets/styles.css.scss
.navbar-inverse, .navbar, .navbar-default{
    border-radius: 0;
}

.subject   {
    text-align: left;
    padding: 10px;
    border-radius: 5px;
    font-size:16px;
    margin-top: 10px;
    margin-bottom: 20px;
    margin-left: 0 auto;
    margin-right: 0 auto;
    width: 70%;
    border: 1px;
    height: 40px;
    font-family: oxygen;
}

.body   {
    text-align: left;
    padding: 10px;
    border-radius: 5px;
    font-size:16px;
    margin-top: 10px;
    margin-bottom: 20px;
    margin-left: 0 auto;
    margin-right: 0 auto;
    width: 100%;
    border: 1px;
    height: 200px;
    font-family: oxygen;
}

.search-form {
    text-align: center;
    color: orange;
}

h3 {
    font-family: 'Text Me One', sans-serif !important;   
    font-size: 18px;
}

.search-well {
    border-radius: 10px;
    border: solid gray 1px !important;
    padding-bottom: 30px;
    margin-bottom: 30px;
    font-family: 'Text Me One', sans-serif !important;
}

.span1.visible-desktop {
    color: lightgray !important;
}

.month_header {
    background-color: lightgray !important;
    color: #FF007F !important;
}

.well {
    border-radius: 10px;
}

.activities {
    border-radius: 10%;
    border: solid gray1px;
    margin: 0 auto;
    margin-bottom: 20px !important;
    height: 270px !important;
    width: 355px !important;
}

.navbar-brand {
    font-family: 'Text Me One', sans-serif !important;
    font-size: 25px;
    text-transform: uppercase;
    color: orange !important;
}

.thumbnail {
    border-radius: 10%;
    border: solid gray 1px;
    margin: 0 auto;
    margin-bottom: 20px !important;
    height: 280px !important;
    width: 355px !important;

}

.thumbnail:hover .hover-text {
    visibility: visible;
    background-color: green;
    opacity: .8;
    border-radius: 10%;
    border: solid gray 1px;
    margin: 0 auto;
    margin-bottom: 20px !important;
    height: 280px !important;
    width: 355px !important;
}

.img.activities {
    border-radius: 10%;
    margin: 0 auto;
    margin-bottom: 20px !important;  
    height: 280px !important;
    width: 355px !important;
}

.hover-text {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background: rgba(29, 106, 154, 0.72);
    color: #fff;
    visibility: hidden;
    opacity: 0;
}

h7 {
    font-family: 'Text Me One', sans-serif !important;
    font-size: 20px !important;
    color: #ffffff !important;
    text-align: center;
    padding-top: 55px !important;
    padding-right: 10px !important;
    padding-left: 10px !important;
}

p {
    color: black !important;
}

h8 {
    font-size: 40px;
}

.skate {
    float: left;
}

.profile-image {
    /*float: left;*/
    border-radius: 10%;
    margin: 0 auto;
    margin-bottom: 20px !important;  
    height: 280px !important;
    width: 355px !important;
}

ul.user-profile, .activity-ul-list {
    padding: 10px;
    margin-top: 70px;
    list-style: none !important;
    background-color: mintcream !important;
    border-radius: 10px;
    font-family: 'Text Me One', sans-serif !important; 
    border: 2px dotted lightgray;
}

.profile-utilities {
    display: inline !important;
}

.well {
    text-align: center;
    margin: 0 auto;
}

.activities-list {
    background-color: #ffffff !important;
    font-family: 'Text Me One', sans-serif !important; 
}

#vendor-activities {
    margin-top: 40px;
    background-color: #ffffff;

}

ul.vendor-activities {
    list-style: none !important;
    text-align: center;
    margin: 0 auto !important;
    font-family: 'Text Me One', sans-serif !important; 
}

img.vendor-activities {
    border-radius: 10%;
}

#reviews {
  margin-top: 40px;  
  background-color: #ffffff;
  font-family: 'Text Me One', sans-serif !important;  
}

#profile, #activity {
    font-size: 16px;
    background-color: #ffffff;
    margin: 0 auto !important;
    text-align: left !important;
}

#user-activity-col-5, #verification-col-5 {
   margin: 0 auto !important;
   text-align: center;
}

#user-col-5 {
   margin: 0 auto !important;
   text-align: center;
}

#leave-review {
    margin-left: 80px;
    margin-right: 80px;
}

#comments {
    padding-top: 40px;
    padding-bottom: 40px;
    margin-bottom: 30px;
    margin-left: 80px;
    margin-right: 80px;
    background-color: mintcream;
}

.linkedin {
    width: 280px;
    height: 175px;
    background-color: mintcream;
    border: dotted lightgray 2px;
    border-radius: 10px;
    text-align: center;
}

.q {
    color: gray !important;
    font-family:  'Text Me One', sans-serif !important; 
    font-size: 16px;
}

h9 {
    font-family:  'Text Me One', sans-serif !important; 
    font-size: 48px;
}

#activity-form {
    margin: 0 auto;
/*    margin-left: 200px;
    margin-right: 200px;*/
    font-family: 'Text Me One', sans-serif !important; 

}

.jumbotron {
    margin-top: 70px;
    text-align: center;
}

.form-control {
    width: 50%;
    text-align: center;
    margin: 0 auto;
}

.panel-body {
    /*width: 50%;*/
    text-align: center;
    margin: 0 auto;
}

.panel-heading, .panel-footer {
    text-align: center;
    margin: 0 auto;
}

